Made description smaller and fixed BG color

--- a/DuploHacks 2025 Website/src/index.css
+++ b/DuploHacks 2025 Website/src/index.css
@@ -8,8 +8,9 @@ body {
   padding: 0;
   margin: 0;
 }
-html{
+html {
   scroll-behavior: smooth;
+  background-color: rgb(28, 1, 46);
 }
 ::selection {
    background-color: rgba(0, 255, 242, 0.5);
