--- a/DuploHacks 2025 Website/src/styles/About.css
+++ b/DuploHacks 2025 Website/src/styles/About.css
@@ -48,7 +48,7 @@
 .about-description {
     font-family: 'Martian Mono', monospace;
     color: #fff;
-    font-size: 2.1rem;
+    font-size: 1.5rem;
     max-width: 900px;
     line-height: 1.18;
     background: none;
